Masking keyframes disappear from dope sheet when using undo. #33580

Closed
opened 2012-12-17 13:23:26 +01:00 by Miika Puustinen (miikap) · 4 comments

%%%Masking keyframes disappear from dope sheet when using undo. Can't get them back without reloading the file. Animating works though when they are not visible and keyframes are there still when the file is reopened.

How to recreate:

Open uv/image editor. Choose masking from dropdown menu. Create a mask. Animate. Open dope sheet (dual view for example). Choose masking. There's keyframes. Press ctrl+z and the mask layer disappears.

Tested on windos 7 64-bit and osx 10.6.8

Simple scene as a blend file included.

%%%

%%%Masking keyframes disappear from dope sheet when using undo. Can't get them back without reloading the file. Animating works though when they are not visible and keyframes are there still when the file is reopened. How to recreate: Open uv/image editor. Choose masking from dropdown menu. Create a mask. Animate. Open dope sheet (dual view for example). Choose masking. There's keyframes. Press ctrl+z and the mask layer disappears. Tested on windos 7 64-bit and osx 10.6.8 Simple scene as a blend file included. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%stealing this one from sergey%%%

%%%stealing this one from sergey%%%

%%%fixed r53107.%%%

%%%fixed r53107.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33580
No description provided.