fix [#33580] Masking keyframes disappear from dope sheet when using undo.